--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,62 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="AppTheme.RootView">
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">fill_parent</item>
+    </style>
+
+    <style name="AppTheme.RootView.Vertical">
+        <item name="android:orientation">vertical</item>
+    </style>
+
+
+    <style name="AppTheme.ListView">
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:dividerHeight">@dimen/divider_height</item>
+    </style>
+
+    <style name="AppTheme.RandomImage">
+        <item name="android:layout_height">@dimen/image_height</item>
+        <item name="android:layout_width">fill_parent</item>
+    </style>
+
+    <style name="AppTheme.RandomImage.Image">
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:src">@drawable/placeholder</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+
+
+    <style name="AppTheme.RandomImage.Sha256">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:textSize">@dimen/subtitle_text_size</item>
+        <item name="android:background">@color/black_semitransparent</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">@dimen/default_padding</item>
+        <item name="android:paddingRight">@dimen/default_padding</item>
+        <item name="android:layout_margin">@dimen/default_margin</item>
+        <item name="android:layout_alignParentBottom">true</item>
+    </style>
+
+    <style name="AppTheme.RandomImage.Date">
+        <item name="android:textSize">@dimen/date_text_size</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/black_semitransparent</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">@dimen/default_padding</item>
+        <item name="android:paddingRight">@dimen/default_padding</item>
+        <item name="android:layout_margin">@dimen/default_margin</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+    </style>
+
 </resources>
+
