--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_renderers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        style="@style/AppTheme.ListView"/>
 
 </android.support.constraint.ConstraintLayout>
