--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,19 @@
         <item name="android:layout_width">fill_parent</item>
     </style>
 
+    <style name="AppTheme.RandomImage.Date">
+        <item name="android:textSize">@dimen/date_text_size</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/black_semitransparent</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">@dimen/default_padding</item>
+        <item name="android:paddingRight">@dimen/default_padding</item>
+        <item name="android:layout_margin">@dimen/default_margin</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+    </style>
+
     <style name="AppTheme.RandomImage.Image">
         <item name="android:layout_height">fill_parent</item>
         <item name="android:src">@drawable/placeholder</item>
@@ -40,9 +53,9 @@
 
 
     <style name="AppTheme.RandomImage.Sha256">
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">25dp</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_alignParentRight">true</item>
         <item name="android:textSize">@dimen/subtitle_text_size</item>
         <item name="android:background">@color/black_semitransparent</item>
         <item name="android:textColor">@color/white</item>
@@ -52,18 +65,6 @@
         <item name="android:layout_alignParentBottom">true</item>
     </style>
 
-    <style name="AppTheme.RandomImage.Date">
-        <item name="android:textSize">@dimen/date_text_size</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:background">@color/black_semitransparent</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:paddingLeft">@dimen/default_padding</item>
-        <item name="android:paddingRight">@dimen/default_padding</item>
-        <item name="android:layout_margin">@dimen/default_margin</item>
-        <item name="android:layout_alignParentTop">true</item>
-        <item name="android:layout_alignParentLeft">true</item>
-    </style>
 
 </resources>
 
