--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="divider_height">0dip</dimen>
-    <dimen name="image_height">300dip</dimen>
+    <dimen name="divider_height">50dip</dimen>
+    <dimen name="image_height">380dip</dimen>
     <dimen name="default_margin">12dip</dimen>
     <dimen name="title_text_size">24dip</dimen>
     <dimen name="subtitle_text_size">16dip</dimen>
     <dimen name="date_text_size">14dip</dimen>
     <dimen name="default_padding">4dip</dimen>
+    <dimen name="text_view_height">50dip</dimen>
 </resources>
