--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
 
 
     <style name="AppTheme.RootView">
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
     </style>
 
     <style name="AppTheme.RootView.Vertical">
@@ -31,8 +31,8 @@
     </style>
 
     <style name="AppTheme.RandomImage.Date">
-        <item name="android:textSize">@dimen/date_text_size</item>
-        <item name="android:layout_height">25dp</item>
+        <item name="android:textSize">@dimen/subtitle_text_size</item>
+        <item name="android:layout_height">@dimen/text_view_height</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/black_semitransparent</item>
         <item name="android:textColor">@color/white</item>
@@ -40,11 +40,10 @@
         <item name="android:paddingRight">@dimen/default_padding</item>
         <item name="android:layout_margin">@dimen/default_margin</item>
         <item name="android:layout_alignParentTop">true</item>
-        <item name="android:layout_alignParentLeft">true</item>
     </style>
 
     <style name="AppTheme.RandomImage.Image">
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_height">@dimen/image_height</item>
         <item name="android:src">@drawable/placeholder</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:scaleType">centerCrop</item>
@@ -53,9 +52,8 @@
 
 
     <style name="AppTheme.RandomImage.Sha256">
-        <item name="android:layout_height">25dp</item>
+        <item name="android:layout_height">@dimen/text_view_height</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_alignParentRight">true</item>
         <item name="android:textSize">@dimen/subtitle_text_size</item>
         <item name="android:background">@color/black_semitransparent</item>
         <item name="android:textColor">@color/white</item>
